--- a/tailwind.css
+++ b/tailwind.css
@@ -1,3 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  h1 {
+    @apply mb-6 text-5xl;
+  }
+  h2 {
+    @apply mb-3 text-3xl;
+  }
+  h3 {
+    @apply mb-2 text-2xl;
+  }
+}
