--- a/tailwind.css
+++ b/tailwind.css
@@ -9,15 +9,19 @@
   }
 
   h1 {
-    @apply mb-6 text-5xl font-headline text-mainColor;
+    @apply mb-6 text-5xl font-headline text-mainColor dark:text-yellow-200;
   }
   h2 {
-    @apply mb-3 text-3xl font-headline text-mainColor;
+    @apply mb-3 text-2xl md:text-3xl font-headline text-mainColor dark:text-yellow-200;
   }
   h3 {
-    @apply mb-2 text-2xl font-headline text-mainColor;
+    @apply mb-2 text-2xl font-headline text-mainColor dark:text-yellow-200;
   }
   p {
-    @apply text-lg
+    @apply text-lg dark:text-gray-100
+  }
+  li {
+    @apply mb-4 text-lg md:text-xl dark:text-gray-100
   }
 }
+
